# umfpack

./: CMakeLists.txt  README.md
AMD/: CMakeLists.txt
AMD/Demo/: CMakeLists.txt
UMFPACK/: CMakeLists.txt  gen_sources_list.py
UMFPACK/Demo/: CMakeLists.txt
UMFPACK/Source/: cholmod_blas.h  umf_analyze.c  umf_assemble.c  umf_blas3_update.c  umf_create_element.c  umf_extend_front.c  umf_internal.h  umf_local_search.c  umf_scale_column.c  umfpack_get_numeric.c
UMFPACK/cmake/: umfpack.cmake
cmake/: umfpackConfig.cmake.in
